# commify-challenge

./: .gitignore  CMakeLists.txt  readme.md  run-main  run-main.sh  run-tests  run-tests.sh
include/: Calculator.h  Checkout.h  Parser.h  Ruleset.h  exceptions.h
src/: Calculator.cpp  Checkout.cpp  Parser.cpp  Ruleset.cpp  main.cpp
test/: CMakeLists.txt  CalculatorTest.cpp  CheckoutTest.cpp  ParserTest.cpp  RulesetTest.cpp
